# lab_infrastructure

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/lab_infrastructure/: __init__.py  artifact_paths.py  compute_metrics.py  csv_register.py  dataset_artifacts.py  dataset_register.py  dataset_schema.py  register_csv.py  run_config.py
src/nmt_lab_shared/: __init__.py  compute_metrics.py  logging.py  monitoring.py  run_config.py
tests/: test_artifact_paths.py  test_csv_register.py  test_dataset_schema.py  test_logging.py  test_monitoring.py  test_register_csv.py  test_run_config.py
